--- a/_config.yml
+++ b/_config.yml
@@ -18,14 +18,10 @@ defaults:
 
 description: Stylish Jekyll Theme
 author:
-  name: dbyll
-  email: dbyll@ismaildemirbilek.com
-  github: dbtek
-  twitter: dbtek
-  pinterest: asd123
-  linkedin: asd123
-  bio: Your stylish, minimalist theme!
-  email_md5: 726351295ec82e145928582f595aa3aa
+  name: Glenn Downing
+  email: downing@cs.utexas.edu
+  twitter: gpdowning
+  bio: Nothing to be done.
 
 rss_path: feed.xml
 categories_path: categories.html
